--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <option value="" disabled selected>Select League</option>
     <option value="English Premier League">English Premier League</option>
     <option value="Spanish BBVA">Spanish BBVA</option>
+    <option value="German Bundesliga">German Bundesliga</option>
   </select>
   <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
   <div id="english">
@@ -20,8 +21,9 @@
   </div>
 </body>
 
-<script src="./spanishPrem.js" type="text/javascript"></script>
 <script src="./englishPrem.js" type="text/javascript"></script>
+<script src="./spanishPrem.js" type="text/javascript"></script>
+<script src="./germanPrem.js" type="text/javascript"></script>
 <script src="./script.js" type="text/javascript"></script>
 
 </html>
