Updated variable names for readability when using multiple leagues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <option value="German Bundesliga">German Bundesliga</option>
   </select>
   <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
-  <div id="english">
+  <div id="displayTable">
 
   </div>
   <div id="matches">
