Added a function that creates a dropdown menu containing all of the teams from the selected league. Once a team is selected, all of their results will be displayed under the league table.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 
 <body>
   <h1>Football Simulator</h1>
-  <select id="leagueChoice">
-    <option value="" disabled selected>Select League</option>
-    <option value="English Premier League">English Premier League</option>
-    <option value="Spanish BBVA">Spanish BBVA</option>
-    <option value="German Bundesliga">German Bundesliga</option>
-  </select>
-  <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
+  <div id="menu">
+    <select id="leagueChoice">
+      <option value="" disabled selected>Select League</option>
+      <option value="English Premier League">English Premier League</option>
+      <option value="Spanish BBVA">Spanish BBVA</option>
+      <option value="German Bundesliga">German Bundesliga</option>
+    </select>
+    <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
+    <br>
+    <div id="teamSelectMenu">
+
+    </div>
+  </div>
   <div id="displayTable">
 
   </div>
