--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <option value="English Premier League">English Premier League</option>
       <option value="Spanish BBVA">Spanish BBVA</option>
       <option value="German Bundesliga">German Bundesliga</option>
+      <option value="Italian Serie A">Italian Serie A</option>
     </select>
     <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
     <br>
@@ -30,6 +31,7 @@
 <script src="./englishPrem.js" type="text/javascript"></script>
 <script src="./spanishPrem.js" type="text/javascript"></script>
 <script src="./germanPrem.js" type="text/javascript"></script>
+<script src="./italianPrem.js" type="text/javascript"></script>
 <script src="./script.js" type="text/javascript"></script>
 
 </html>
