--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <option value="Spanish BBVA">Spanish BBVA</option>
       <option value="German Bundesliga">German Bundesliga</option>
       <option value="Italian Serie A">Italian Serie A</option>
+      <option value="French Ligue 1">French Ligue 1</option>
     </select>
     <input type="submit" name="submit" value="Simulate" onclick="leagueSelect()">
     <br>
@@ -32,6 +33,7 @@
 <script src="./spanishPrem.js" type="text/javascript"></script>
 <script src="./germanPrem.js" type="text/javascript"></script>
 <script src="./italianPrem.js" type="text/javascript"></script>
+<script src="./frenchPrem.js" type="text/javascript"></script>
 <script src="./script.js" type="text/javascript"></script>
 
 </html>
