--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   </div>
 </body>
 
-<script src="./englishPrem.js" type="text/javascript"></script>
-<script src="./spanishPrem.js" type="text/javascript"></script>
-<script src="./germanPrem.js" type="text/javascript"></script>
-<script src="./italianPrem.js" type="text/javascript"></script>
-<script src="./frenchPrem.js" type="text/javascript"></script>
-<script src="./script.js" type="text/javascript"></script>
+<script src="./javascript/englishPrem.js" type="text/javascript"></script>
+<script src="./javascript/spanishPrem.js" type="text/javascript"></script>
+<script src="./javascript/germanPrem.js" type="text/javascript"></script>
+<script src="./javascript/italianPrem.js" type="text/javascript"></script>
+<script src="./javascript/frenchPrem.js" type="text/javascript"></script>
+<script src="./javascript/script.js" type="text/javascript"></script>
 
 </html>
