--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Football Simulator</title>
 
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
